Fix: Horizontal scrollbar doesn't appear anymore when horizontal size is extreme minimal on photos realisations pages.

--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -60,10 +60,10 @@
 // main: main.scss
 
 header {
+  max-width: 100%;
 
   .header-logo {
     float: left;
-    // align-items: center;
 
     a {
       display: inline-block;
