--- a/scss/photosRealisations/_photosRealisations.scss
+++ b/scss/photosRealisations/_photosRealisations.scss
@@ -1,4 +1,5 @@
 section {
+  overflow: hidden; // without this an horizontal scrollbar appear at the minimum horizontal size (only)
   text-align: center;
   padding-top: $headerHeight + 50px;
   padding-left: 4vw;
