--- a/src/css/photosRealisations/main.css
+++ b/src/css/photosRealisations/main.css
@@ -1,34 +1,34 @@
-.header-logo {
-  float: left;
-  align-items: center; }
-  .header-logo a {
-    display: inline-block;
-    vertical-align: center; }
-    .header-logo a .header-logo-text {
-      float: right;
-      color: #eee;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-weight: 500; }
-    .header-logo a .logo-company-header {
-      float: left;
-      margin-top: 5px;
-      margin-right: 7px;
-      width: 60px;
-      height: 60px; }
-      .header-logo a .logo-company-header object {
+header {
+  max-width: 100%; }
+  header .header-logo {
+    float: left; }
+    header .header-logo a {
+      display: inline-block;
+      vertical-align: center; }
+      header .header-logo a .header-logo-text {
+        float: right;
+        color: #eee;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: 500; }
+      header .header-logo a .logo-company-header {
+        float: left;
+        margin-top: 5px;
+        margin-right: 7px;
         width: 60px;
-        height: 60px;
-        pointer-events: none; }
-
-.header-menu {
-  float: right; }
-  .header-menu li a {
-    color: #eee;
-    margin-right: 15px;
-    text-decoration: none; }
-    .header-menu li a:hover {
-      color: #00adb5; }
+        height: 60px; }
+        header .header-logo a .logo-company-header object {
+          width: 60px;
+          height: 60px;
+          pointer-events: none; }
+  header .header-menu {
+    float: right; }
+    header .header-menu li a {
+      color: #eee;
+      margin-right: 15px;
+      text-decoration: none; }
+      header .header-menu li a:hover {
+        color: #00adb5; }
 
 footer {
   background-color: rgba(0, 173, 181, 0.8);
@@ -116,6 +116,7 @@ section {
       cursor: pointer; }
 
 section {
+  overflow: hidden;
   text-align: center;
   padding-top: 120px;
   padding-left: 4vw;
